# rs-nes

./: .gitignore  .rustfmt.toml  Cargo.toml  architecture.org  log.txt  nestest-cpu.gold.txt  nestest-log.gold.txt  nestest-log.txt  todo.md
src/: #cpu.rs#  bus.rs  cartridge.rs  common.rs  controller.rs  cpu.rs  debug.rs  instructions.rs  lib.rs  main.rs  mapper.rs  memory.rs  ppu.rs  tcpu.rs  timer.rs  vnes.rs
src/apu/: counter.rs  dmc.rs  mixer.rs  mod.rs  noise.rs  pulse.rs  triangle.rs  volume.rs
src/audio/: mod.rs
src/cartridge/: header.rs  mod.rs
src/cartridge/mapper/: mapper0.rs  mapper1.rs  mapper3.rs  mod.rs
src/controller/: mod.rs
src/cpu/: instructions.rs  interpreter.rs  mod.rs  status.rs  tests.rs
src/debug/: mod.rs
src/graphics/: mod.rs  nop.rs
src/graphics/sdl2/: mod.rs  tests.rs
src/memory/: mod.rs
src/ppu/: flags.rs  mod.rs  nametable.rs  registers.rs  sdl_interface.rs  sprite.rs  tests.rs  trenderer.rs  vram.rs
src/sdl_interface/: graphics.rs  mod.rs  tests.rs
src/tests/: ppu_tests.rs  rom_tests.rs
test/: nestest.log.gold
