[package]
name = "rs-nes"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

[lib]
name = "venus"
path = "src/lib.rs"

[[test]]
name = "rom_tests"
path = "src/tests/rom_tests.rs"

[[test]]
name = "ppu_tests"
path = "src/tests/ppu_tests.rs"

[features]
notimers = []

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
bitflags = "1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
lazy_static = "*"
crossbeam = "0.8"
libc = "0.2"
dynasm = "2.0"
